--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="pages.css">
 </head>
 <body bgcolor="pink">
-    <h3 style="color:black;">*************************************************************************************************************************************</h3>
+    <h3 style="color:black;">**************************************************************************************************************************************</h3>
     <h1><center><marquee style="color:navy;"><i><b>***WELCOME TO PRINCESS WORLD***</b></i></marquee> </center></h1>
-    <h3 style="color:black;">***************************************************************************************************************************************</h3>
+    <h3 style="color:black;">**************************************************************************************************************************************</h3>
     <center><h2 style="color:crimson;"><i><b>if you want to know about me.....just click on me....i will tell you my story...</b></i> </center></h2>
     <div id="picture">
         <div>
